🎨 Fix horizontal scrollbar on mobile

--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -14,18 +14,18 @@
 .container-grid {
 	display: grid;
 	grid-template-areas: 
-		'header'
-		'nav'
-		'main';
+		'header nav'
+		'main main';
+	grid-template-columns: 2fr 1fr;
 	grid-gap: var(--spacer);
 	margin-top: var(--spacer-lg);
 	margin-bottom: var(--spacer-lg);
 
-	@media (min-width: $sm) {
-		grid-template-areas: 
-			'header nav'
-			'main main';
-		grid-template-columns: 2fr 1fr;
+	@media (max-width: $sm - 1) {
+	grid-template-areas: 
+		'header'
+		'main';
+	grid-template-columns: 100%;
 	}
 }
 
